--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -10,7 +9,7 @@
 <body>
   <div class="container">
     <h1>🌦️ Weather Predictor Indonesia</h1>
-    <p class="subtitle">Prediksi Cuaca Berbasis API BMKG & Gemini</p>
+    <p class="subtitle">Prediksi Cuaca Berbasis BMKG & Gemini AI</p>
 
     <div class="input-section">
       <label for="province">Pilih Provinsi:</label>
@@ -27,11 +26,6 @@
       <p id="temperature"></p>
       <p id="condition"></p>
       <p id="geminiPrediction" class="ai-result"></p>
-    </div>
-
-    <div class="api-section">
-      <input type="password" id="geminiKey" placeholder="Masukkan Gemini API Key..." />
-      <small>Masukkan API Key agar analisis AI aktif</small>
     </div>
   </div>
 
